# applet-window-title

./: CHANGELOG.md  CMakeLists.txt  README.md  metadata.desktop  metadata.json
contents/config/: config.qml  main.xml
contents/locale/ru/LC_MESSAGES/: plasma_applet_org.kde.windowtitle.mo
contents/locale/uk/LC_MESSAGES/: plasma_applet_org.kde.windowtitle.mo
contents/tools/: Tools.js
contents/ui/: ActionsMouseArea.qml  Broadcaster.qml  LatteWindowsTracker.qml  PlasmaTasksModel.qml  QIconItem.qml  TitleLayout.qml  main.qml
contents/ui/config/: ConfigAppearance.qml  ConfigBehavior.qml  ConfigGeneral.qml  CustomComboBox.qml  LockItem.qml  SlidingBox.qml  StyleComboBox.qml  SubstitutionsPopup.qml
package/: metadata.desktop
package/contents/config/: config.qml  main.xml
package/contents/ui/: Broadcaster.qml  TitleLayout.qml
translate/: ReadMe.md  ru.po  template.pot  uk.po
